fixed a small layout issue caused by upscaled element overflowing the wrapper and making page scrollable sideways : add a wrapper--hide-overflow modifier with a css property of overflow:hidden

--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -42,4 +42,8 @@
 		}
 	}
 
+	&--hide-overflow {
+		overflow: hidden;
+	}
+
 }
